--- a/Sprint 2/Site Institucional/Site Institucional/src/css/login.css
+++ b/Sprint 2/Site Institucional/Site Institucional/src/css/login.css
@@ -2,6 +2,8 @@
     --primary-blue: #5995fd;
     --p-darker-blue: #4d84e2;
     --p-light-blue: #04befe;
+    --primary-pink: #B8008A;
+    --p-light-pink: #ee00b2;
 }
 
 * {
@@ -42,7 +44,7 @@ na aula de algoritmo
     width: 2000px;
     height: 2000px;
     border-radius: 50%;
-    background: linear-gradient(-45deg, var(--p-darker-blue), var(--p-light-blue));
+    background: linear-gradient(90deg, var(--primary-pink), var(--p-light-blue));
     top: -10%;
     right: 48%;
     transform: translateY(-50%);
@@ -99,7 +101,9 @@ form.sign-up-form {
 
 .title {
     font-size: 2.2rem;
-    color: #444;
+    color: #fff;
+    letter-spacing: 2px;
+    text-transform: uppercase;
     margin-bottom: 10px;
 }
 
@@ -107,9 +111,9 @@ form.sign-up-form {
     max-width: 380px;
     width: 100%;
     height: 55px;
-    background-color: #f0f0f0;
+    background-color: rgb(27, 27, 27);
     margin: 10px 0;
-    border-radius: 55px;
+    border-radius: 10px;
     display: grid;
     grid-template-columns: 15% 85%;
     padding: 0 .4rem;
@@ -128,7 +132,7 @@ form.sign-up-form {
     border: none;
     line-height: 1;
     font-weight: 600;
-    color: rgb(27, 27, 27);
+    color: #fff;
     font-size: 1.1rem;
 }
 
@@ -157,7 +161,7 @@ form.sign-up-form {
 }
 
 .social-text {
-    color: #333;
+    color: #fff;
     padding: .7rem 0;
     font-size: 1rem;
     font-weight: 600;
@@ -205,7 +209,7 @@ form.sign-up-form {
 .panel {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    /* align-items: flex-end; */
     justify-content: space-around;
     text-align: center;
     z-index: 7;
@@ -235,7 +239,8 @@ como none para que ele ignore o right-panel
 .panel h3 {
     font-weight: 600;
     line-height: 1;
-    font-size: 1.5rem;
+    font-size: 1.95rem;
+    margin-bottom: 20px;
 }
 
 .panel p {
@@ -312,6 +317,10 @@ como none para que ele ignore o right-panel
     align-items: center;
     grid-template-columns: 70% 30%;
     margin: 10px 0;
+}
+
+.check-option p {
+    color: #fff;
 }
 
 .checked {
@@ -429,6 +438,10 @@ como none para que ele ignore o right-panel
     border-top-right-radius: 4px;
     font-size: 20px;
     border-bottom-right-radius: 4px;
+}
+
+.pink {
+    background-color: var(--primary-pink);
 }
 
 #loginAlert {
