--- a/Sprint 2/Site Institucional/Site Institucional/src/css/dashboard.css
+++ b/Sprint 2/Site Institucional/Site Institucional/src/css/dashboard.css
@@ -5,10 +5,13 @@
     --nav-width: 68px;
     /*------------CORES------------*/
     --first-color: #3e3e3f88;
-    --first-color-light: #AFA5D9;
-    --gray-color: #51585C;
+    --first-color-light: #262626;
+    --gray-color: #262626;
     --white-color: #F7F6FB;
-    --blue-color: #00A3FA;
+    --primary-blue: #5995fd;
+    --p-darker-blue: #4d84e2;
+    --p-light-blue: #04befe;
+  
     /*------------FONTES E TIPOGRAFIA------------*/
     --body-font: 'Nunito', sans-serif;
     --normal-font-size: 1rem;
@@ -38,7 +41,7 @@
 
 body {
     position: relative;
-    background-color: #eeeeeef5;
+    background-color: rgba(0, 0, 0, 0.8);
     /* margin: var(--header-height)0 0 0; */
     padding: 0 1rem;
     font-family: var(--body-font);
@@ -96,10 +99,11 @@ a {
     left: 0;
     width: var(--nav-width);
     height: 100vh;
-    background-color: var(--gray-color);
+    background: linear-gradient(90deg, var(--p-darker-blue), var(--p-light-blue));
     padding: .5rem 1rem 0 0;
     transition: .5s;
     z-index: var(--z-fixed);
+    border-right: 2px solid #00A1D7;
 }
 
 .nav {
@@ -155,7 +159,7 @@ a {
 }
 
 .general-title {
-    color: #51585C;
+    color: #F7F6FB;
     width: fit-content;
     margin: 20px auto;
     text-align: center;
@@ -168,7 +172,7 @@ a {
 
 .pink-stroke {
     margin: auto;
-    background-color: var(--blue-color);
+    background-color: #00A1D7;
     width: 100%;
     height: 3px;
     text-align: center;
@@ -193,15 +197,15 @@ a {
 
 .page-salas .boxes-item {
     margin: 20px 20px;
-    width: 300px;
+    width: 250px;
     height: 200px;
     display: flex;
     align-items: center;
     justify-content: space-around;
     flex-direction: column;
-    background-color: #0b98c756;
+    background-color: #424242;
     border-radius: 10px;
-    color: #34383a;
+    color: #F7F6FB;
     transition: 0.15s;
 }
 
@@ -218,29 +222,34 @@ a {
     width: 90%;
     margin-top: -5%;
     text-align: justify;
-    color: #34383a;
+    color: #F7F6FB;
 }
 
 .page-salas .box-text .alerta {
     color: rgb(223, 209, 11);
+    margin-left: 6px;
 }
 
 .page-salas .box-text .ideal {
     color: green;
+    margin-left: 6px;
 }
 
 .page-salas .box-text .critico {
     color: darkred;
+    margin-left: 6px;
 }
 
 .page-salas .box-text .temperatura {
     color: rgb(248, 117, 10);
     font-size: 22px;
+    margin-right: 5px;
 }
 
 .page-salas .box-text .umidade {
-    color: rgb(42, 12, 124);
+    color: rgb(44, 128, 197);
     font-size: 22px;
+    margin-right: 5px;
 }
 
 .page-salas .box-text .luminosidade {
