--- a/Sprint 2/API - ESTILIZADA/NODE5/css/style.css
+++ b/Sprint 2/API - ESTILIZADA/NODE5/css/style.css
@@ -1,48 +1,45 @@
-/*----------Variaveis CSS--------------*/
-:root{
+:root {
     --header-height: 4rem;
     --nav-width: 68px;
-/*------------CORES------------*/
-
+    /*------------CORES------------*/
     --first-color: #3e3e3f88;
-    --first-color-light: #F7F6FB;
-    --gray-color: #51585C;
+    --first-color-light: #262626;
+    --gray-color: #262626;
     --white-color: #F7F6FB;
-    --blue-color: #00A3FA;
-
-/*------------FONTES E TIPOGRAFIA------------*/
-
+    --primary-blue: #5995fd;
+    --p-darker-blue: #4d84e2;
+    --p-light-blue: #04befe;
+    /*------------FONTES E TIPOGRAFIA------------*/
     --body-font: 'Nunito', sans-serif;
     --normal-font-size: 1rem;
-
-/*------------Z-INDEX------------*/
-
-    --z-fixed:100;
+    /*------------Z-INDEX------------*/
+    --z-fixed: 100;
 }
 
 /*------------BASES------------*/
 
-*, ::before, ::after{
+*, ::before, ::after {
     box-sizing: border-box;
 }
+
 ::-webkit-scrollbar-track {
     background-color: #51585C;
 }
 
- ::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 8px;
     height: 8px;
     background: #51585C;
 }
 
- ::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background: #00A1D7;
 }
 
-body{
+body {
     position: relative;
-    background-color: #eeeeeef5;
-    margin: var(--header-height)0 0 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    /* margin: var(--header-height)0 0 0; */
     padding: 0 1rem;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
@@ -50,55 +47,63 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
 /*------------HEADER------------*/
 
-.header{
+/* 
+.header {
     width: 100%;
     height: var(--header-height);
-    position: fixed;
     top: 0;
     left: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 1rem;
-    background-color: var(--first-color);
     z-index: var(--z-fixed);
     transition: .5s;
+} */
+
+.header p {
+    font-weight: 600;
+    font-size: 16px;
+    text-transform: uppercase;
+    color: var(--blue-color);
 }
 
-.header_img{
-    width: 35px;
-    height: 35px;
+.header_img {
+    width: 40px;
+    height: 40px;
     display: flex;
-    justify-content: center;
+    justify-content: end;
     border-radius: 50%;
     overflow: hidden;
+    margin-left: 75%;
 }
 
-.header_img img{
+.header_img img {
     width: 40px;
 }
 
 /*------------HEADER------------*/
 
-.l-navbar{
+.l-navbar {
     position: fixed;
     top: 0;
     left: 0;
     width: var(--nav-width);
     height: 100vh;
-    background-color: var(--gray-color);
+    background: linear-gradient(90deg, var(--p-darker-blue), var(--p-light-blue));
     padding: .5rem 1rem 0 0;
     transition: .5s;
     z-index: var(--z-fixed);
+    border-right: 2px solid #00A1D7;
 }
 
-.nav{
+.nav {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -106,71 +111,143 @@ a{
     overflow: hidden;
 }
 
-.nav_logo img{
+.nav_logo img {
     width: 25px;
 }
-.nav_logo, 
-.nav_link{
-    display: grid; /*Torna o elemento um grid container.*/
-    grid-template-columns: max-content max-content; /*Define os nomes das linhas e funções de dimensionamento (tamanho da trilha) nas colunas da grade .*/
+
+.nav_logo, .nav_link {
+    display: grid;
+    /*Torna o elemento um grid container.*/
+    grid-template-columns: max-content max-content;
+    /*Define os nomes das linhas e funções de dimensionamento (tamanho da trilha) nas colunas da grade .*/
     align-items: center;
-    column-gap: 1rem; /*Define o tamanho da lacuna entre as colunas de um elemento.*/
-    padding: .5rem  0 .5rem 1.5rem;
+    column-gap: 1rem;
+    /*Define o tamanho da lacuna entre as colunas de um elemento.*/
+    padding: .5rem 0 .5rem 1.5rem;
 }
 
-.nav_logo{
+.nav_logo {
     margin-bottom: 2rem;
 }
 
-.nav_logo-icon{
+.nav_logo-icon {
     font-size: 1.25rem;
     color: var(--white-color);
 }
 
-.nav_logo-name{
+.nav_logo-name {
     color: var(--white-color);
     font-weight: 700;
 }
 
-.nav_link{
+.nav_link {
     position: relative;
     color: var(--first-color-light);
     margin-bottom: 1.5rem;
     transition: .3s;
 }
 
-.nav_link:hover{
-    color:#00A1D7;
+.nav_link:hover {
+    color: var(--white-color);
 }
 
-.nav_icon{
+.nav_icon {
     font-size: 1.25rem;
 }
 
-
-.invisible {
-    display: none;
+.general-title {
+    color: #F7F6FB;
+    width: fit-content;
+    margin: 20px auto;
+    text-align: center;
+    text-transform: uppercase;
 }
 
-.dashboard{
-    margin-left: 20%;
-    width: 80%;
-    height: auto;
-}
-.dashboard h1,h2{
-    margin-left: 5%;
+.general-title h1 {
+    font-size: 30px;
 }
 
-.dashboard h1{
-    font-size: 20px;
-}
-
-.dashboard h2{
-    font-size: 17px;
-}
-
-.dashboard canvas{
-    align-items: center;
+.pink-stroke {
     margin: auto;
-    width: 10%;
+    background-color: #00A1D7;
+    width: 100%;
+    height: 3px;
+    text-align: center;
+    margin-top: 10px;
+    border: none;
+}
+
+.page-salas .boxes {
+    width: fit-content;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: auto;
+    justify-content: center;
+    color: aliceblue;
+}
+* {
+    margin: 0;
+}
+
+.graphics-orientation {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.graphics-container {
+    background-color: rgb(51, 51, 51);
+    border-radius: 10px;
+    height: 95vh;
+    width: 90%;
+    margin-left: 55px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    flex-wrap: wrap;
+}
+
+.panel {
+    background-color: rgba(255, 255, 255, 0.884);
+    border-radius: 10px;
+    min-width: 40%;
+    width: 40%;
+    flex: 2;
+    display: flex;
+    align-items: center;
+    margin: 2px;
+    flex-direction: column;
+}
+
+.panel .general-title h1 {
+    font-size: 20px;
+    color: rgb(27, 27, 27);
+}
+
+.graphics-container .panel:first-child {
+    border-bottom-left-radius: 0px !important;
+    border-top-right-radius: 0px !important;
+}
+
+.panel:nth-child(2) {
+    border-bottom-right-radius: 0px !important;
+    border-top-left-radius: 0px !important;
+}
+
+.panel:nth-child(3) {
+    border-top-left-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
+}
+
+.panel:nth-child(4) {
+    border-top-right-radius: 0px !important;
+    border-bottom-left-radius: 0px !important;
+}
+
+.invisible{
+    display: none;
 }
