--- a/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/src/css/dashboard.css
+++ b/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/src/css/dashboard.css
@@ -18,9 +18,12 @@
     --z-fixed: 100;
 }
 
+
 /*------------BASES------------*/
 
-*, ::before, ::after {
+*,
+ ::before,
+ ::after {
     box-sizing: border-box;
 }
 
@@ -53,7 +56,9 @@ a {
     text-decoration: none;
 }
 
+
 /*------------HEADER------------*/
+
 
 /* 
 .header {
@@ -90,6 +95,7 @@ a {
     width: 40px;
 }
 
+
 /*------------HEADER------------*/
 
 .l-navbar {
@@ -117,7 +123,8 @@ a {
     width: 25px;
 }
 
-.nav_logo, .nav_link {
+.nav_logo,
+.nav_link {
     display: grid;
     /*Torna o elemento um grid container.*/
     grid-template-columns: max-content max-content;
@@ -129,7 +136,7 @@ a {
 }
 
 .nav_logo {
-    margin-bottom: 2rem;
+    margin-bottom: 10rem;
 }
 
 .nav_logo-icon {
@@ -268,4 +275,23 @@ a {
     position: absolute;
     top: 10px;
     left: 0;
+}
+
+.page-cadastro {
+    width: fit-content;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: auto;
+    justify-content: center;
+}
+
+.page-cadastro .solid {
+    background-color: #00A1D7;
+}
+
+.page-cadastro .solid:hover {
+    background-color: #04befe;
 }
