--- a/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/src/css/login.css
+++ b/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/src/css/login.css
@@ -74,6 +74,10 @@ na aula de algoritmo
     border-left: 20px solid var(--p-light-blue);
 }
 
+.first-step.invisible, .second-step.invisible, .third-step.invisible {
+    display: none;
+}
+
 .container {
     position: relative;
     width: 100%;
@@ -178,6 +182,30 @@ form.sign-up-form {
     font-weight: 600;
     color: #fff;
     font-size: 1.1rem;
+}
+
+.input-field select {
+    background: none;
+    outline: none;
+    border: none;
+    line-height: 1;
+    font-weight: 600;
+    color: #fff;
+    font-size: 1.1rem;
+}
+
+.input-field select option:first-child {
+    color: #acacac;
+}
+
+.input-field::-webkit-scrollbar {}
+
+.input-field select option {
+    background-color: rgb( 27, 27, 27);
+}
+
+.input-field .inputs-holder {
+    width: 300px;
 }
 
 .input-field input::placeholder {
