--- a/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/src/css/login.css
+++ b/Sprint 3/API - TODAS/API - EM USO/API - Abner/public/src/css/login.css
@@ -4,6 +4,8 @@
     --p-light-blue: #04befe;
     --primary-pink: #B8008A;
     --p-light-pink: #ee00b2;
+    --cancel-color: #c54444;
+
 }
 
 * {
@@ -445,7 +447,7 @@ como none para que ele ignore o right-panel
     background-color: #fff;
     height: 50px;
     position: absolute;
-    top: 30%;
+    top: 77%;
     border: 0.5px solid rgba(0, 0, 0, 0.75);
     z-index: 8;
     box-shadow: 14px 13px 28px -15px rgba(0, 0, 0, 0.75);
@@ -571,3 +573,21 @@ como none para que ele ignore o right-panel
         transition: 0.8s ease-in-out;
     }
 }
+
+
+
+.wrong-input{
+    animation: vibration 0.1s;
+    animation-iteration-count: 3;
+    border: 3px solid var(--cancel-color);
+    color: var(--cancel-color);
+}
+
+
+@keyframes vibration {
+    0% {margin-left: 0;}
+    25% {margin-left: 5px;}
+    50% {margin-left: 0;}
+    75% {margin-left: -5px;}
+    100% {margin-left: 0;}
+  }
