--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/login.css
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/login.css
@@ -5,7 +5,6 @@
     --primary-pink: #B8008A;
     --p-light-pink: #ee00b2;
     --cancel-color: #c54444;
-
 }
 
 * {
@@ -16,10 +15,12 @@
     user-select: none;
 }
 
+
 /* utilizando a unidade medida relativa "rem", para que a fonte 
 aumente ou diminua de acordo com a resoulção da tela, similar a vh que aprendemos 
 na aula de algoritmo
  */
+
 
 /* font-weight é o peso da fonte, exemplos: 
 900 - extra-bold (poucas fontes tem)
@@ -30,6 +31,7 @@ na aula de algoritmo
 200 - lighter 
 100 - etra-light
 */
+
 
 /* quando você passa a transition com apenas dois valores eles são de duração e delay */
 
@@ -76,7 +78,9 @@ na aula de algoritmo
     border-left: 20px solid var(--p-light-blue);
 }
 
-.first-step.invisible, .second-step.invisible, .third-step.invisible {
+.first-step.invisible,
+.second-step.invisible,
+.third-step.invisible {
     display: none;
 }
 
@@ -305,6 +309,7 @@ form.sign-up-form {
     grid-template-columns: repeat(2, 1fr);
 }
 
+
 /*a unidade de medida "fr" fuciona de forma semelhante ao flex-grow, 1fr significa que a coluna vai ocupar 
     uma fração do espaço disponível, e o repeat aplica isso pra duas colunas, que são respectivamento o left-panel
     e o right-panel*/
@@ -327,6 +332,7 @@ form.sign-up-form {
     pointer-events: none;
     padding: 3rem 12% 2rem 17%;
 }
+
 
 /* os pointer events são todos os eventos referentes ao mouse
 o right-panel fica em cima do formulário de login, fazendo com que
@@ -366,9 +372,11 @@ como none para que ele ignore o right-panel
     transition: 1.1s 0.3s ease-in-out;
 }
 
-.right-panel .content, .right-panel .img {
+.right-panel .content,
+.right-panel .img {
     transform: translateX(1100px);
 }
+
 
 /*animações*/
 
@@ -377,11 +385,13 @@ como none para que ele ignore o right-panel
     right: 52%;
 }
 
-.container.sign-up-mode .left-panel .img, .container.sign-up-mode .left-panel .content {
+.container.sign-up-mode .left-panel .img,
+.container.sign-up-mode .left-panel .content {
     transform: translate(-1100px);
 }
 
-.container.sign-up-mode .right-panel .content, .container.sign-up-mode .right-panel .img {
+.container.sign-up-mode .right-panel .content,
+.container.sign-up-mode .right-panel .img {
     transform: translateX(0);
 }
 
@@ -574,20 +584,76 @@ como none para que ele ignore o right-panel
     }
 }
 
-
-
-.wrong-input{
+.wrong-input {
     animation: vibration 0.1s;
     animation-iteration-count: 3;
     border: 3px solid var(--cancel-color);
     color: var(--cancel-color);
 }
 
-
 @keyframes vibration {
-    0% {margin-left: 0;}
-    25% {margin-left: 5px;}
-    50% {margin-left: 0;}
-    75% {margin-left: -5px;}
-    100% {margin-left: 0;}
-  }
+    0% {
+        margin-left: 0;
+    }
+    25% {
+        margin-left: 5px;
+    }
+    50% {
+        margin-left: 0;
+    }
+    75% {
+        margin-left: -5px;
+    }
+    100% {
+        margin-left: 0;
+    }
+}
+
+.input-radio {
+    transform: translate(-50%, -50%);
+    margin-top: 5%;
+    margin-left: 50%;
+    width: 50%;
+}
+
+.input-radio input[type="radio"] {
+    display: none;
+}
+
+.input-radio label {
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    width: 110px;
+    float: left;
+    margin-left: 10px;
+    position: relative;
+    font-weight: 400;
+    color: #04befe;
+    border: 2px solid #04befe;
+    border-radius: 5px;
+    padding: 10px 5px;
+    display: flex;
+    cursor: pointer;
+}
+
+.input-radio label::before {
+    content: "";
+    height: 6px;
+    width: 6px;
+    border: 3px solid white;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+input[type="radio"]:checked+label {
+    color: white;
+    background-color: #04befe;
+}
+
+input[type="radio"]:checked+label:checked {
+    height: 8px;
+    width: 8px;
+    border: 3px solid white;
+    background-color: #04befe;
+}
