--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/login.css
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/login.css
@@ -5,6 +5,8 @@
     --primary-pink: #B8008A;
     --p-light-pink: #ee00b2;
     --cancel-color: #c54444;
+    --warning-color: #f9fe98;
+    --darker-warning-color: #f0dc6f;
 }
 
 * {
@@ -27,7 +29,7 @@ na aula de algoritmo
 400 - regular (padrão) 
 300 - light 
 200 - lighter 
-100 - etra-light
+100 - extra-light
 */
 
 /* quando você passa a transition com apenas dois valores eles são de duração e delay */
@@ -512,12 +514,12 @@ como none para que ele ignore o right-panel
     height: 50px;
     width: 420px;
     padding: 10px 0px 10px 20px;
-    background-color: #98FB98;
+    background-color: #98FB98; 
     z-index: 10;
     transform: translateX(500px);
     transition: all ease-in-out 0.5s;
     border-radius: 4px;
-    border-left: 10px solid #3CB371;
+    border-left: 10px solid #3CB371; 
 }
 
 .alert.visible {
