--- a/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/login.css
+++ b/Sprint 3/API - TODAS/API - EM USO/API - projeto-site/public/src/css/login.css
@@ -587,8 +587,8 @@ como none para que ele ignore o right-panel
 .wrong-input {
     animation: vibration 0.1s;
     animation-iteration-count: 3;
-    border: 3px solid var(--cancel-color);
-    color: var(--cancel-color);
+    border: 3px solid var(--darker-danger-color);
+    color: var(--darker-danger-color);
 }
 
 @keyframes vibration {
